<resources>
    <string name="app_name">tentativa3calculadora</string>
    <string name="string_btncalc">string/btnCalc</string>
    <string name="_btncalc">btnCalc</string>
    <string name="hintN2">hintN2</string>
    <string name="hintN1">hintN1</string>
    <string name="numero1">Numero1</string>
    <string name="numero2">numero2</string>
    <string name="somar">somar</string>
    <string name="subtrair">Subtrair</string>
    <string name="multiplicar">multiplicar</string>
    <string name="dividir">dividir</string>
</resources>
